macros/tests/entry/fail/missing.stderr
error: Missing `table` argument
 --> tests/entry/fail/missing.rs:5:11
  |
5 | fn e_main(_handle: EfiHandle) -> Result<()> {
  |           ^^^^^^^^^^^^^^^^^^

error[E0061]: this function takes 1 argument but 2 arguments were supplied
 --> tests/entry/fail/missing.rs:5:4
  |
4 | #[entry]
  | -------- unexpected argument of type `nuefi::SystemTable<Boot>`
5 | fn e_main(_handle: EfiHandle) -> Result<()> {
  |    ^^^^^^
  |
note: function defined here
 --> tests/entry/fail/missing.rs:5:4
  |
5 | fn e_main(_handle: EfiHandle) -> Result<()> {
  |    ^^^^^^ ------------------
